// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updates positions when a block is sized 1`] = `
Array [
  Array [
    Object {
      "blocks": Array [
        Object {
          "height": 20,
          "id": "0",
          "index": 0,
          "name": "Block 1",
          "vx": -0.000002980368457650845,
          "vy": 0.0001386828971598564,
          "width": 10,
          "x": -210.8040114734301,
          "y": -1.2744342837437708,
        },
        Object {
          "height": 40,
          "id": "5",
          "index": 1,
          "name": "Block 2",
          "vx": 0.000002980368457650845,
          "vy": -0.0001386828971598564,
          "width": 30,
          "x": 210.8040114734301,
          "y": 1.2744342837437708,
        },
      ],
      "type": "UPDATE_FORCE",
    },
  ],
]
`;

exports[`updates positions when a link is added 1`] = `
Array [
  Array [
    Object {
      "blocks": Array [
        Object {
          "height": 20,
          "id": "0",
          "index": 0,
          "name": "Block 1",
          "vx": 0.0011629378019743536,
          "vy": 0.0015960666797404594,
          "width": 10,
          "x": -146.4939134663013,
          "y": -11.73523083435094,
        },
        Object {
          "height": 40,
          "id": "5",
          "index": 1,
          "name": "Block 2",
          "vx": 0.002127208106146669,
          "vy": 0.0005042648104607253,
          "width": 30,
          "x": -4.967130362683278,
          "y": 0.3698204770865645,
        },
        Object {
          "height": 60,
          "id": "10",
          "index": 2,
          "name": "Block 3",
          "vx": 0.003401918151403063,
          "vy": -0.0007967896521473163,
          "width": 50,
          "x": 151.4677358930441,
          "y": 11.366713899102429,
        },
      ],
      "type": "UPDATE_FORCE",
    },
  ],
]
`;
